# AI-Voice-Assistant

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai-voice-assistant-free-toolkit.jsx  docker-compose.observability.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.arm64  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/audio/: resample.py
backend/app/core/: auth.py  logging.py  rate_limit.py  timing.py  tracing.py
backend/app/routers/: chat.py  pipeline.py  stt.py  tts.py
backend/app/services/: llm_service.py  stt_service.py  tts_service.py
backend/app/services/llm/: __init__.py  base.py  factory.py  groq_provider.py  ollama_provider.py
backend/app/services/tts/: __init__.py  base.py  factory.py  kokoro_provider.py  openvoice_provider.py  piper_provider.py
backend/app/streaming/: async_stream.py  sentence_splitter.py  turn_manager.py  vad.py  wav.py
backend/tests/: test_finetune_prepare.py  test_judge.py  test_metrics.py  test_sentence_splitter.py  test_tracing.py  test_turn_manager.py
docs/: design-doc-template.md
docs/adr/: 0001-eval-harness.md  0002-llm-provider-abstraction.md  README.md
docs/design/: phase-0.5-notes.md  phase-b-streaming-pipeline.md  phase-b1-notes.md  phase-b2-notes.md  phase-b3-notes.md  phase-b4-notes.md  phase-b5-notes.md  phase-c-notes.md  phase-d-notes.md  phase-e-notes.md  phase-f-notes.md  phase-g1-llm-judge.md  phase-g2-observability.md  phase-g3-lora-finetune.md
eval/: README.md
eval/datasets/llm/: golden_qa.jsonl  rubric.md
eval/datasets/stt/: README.md  manifest.json
eval/datasets/tts/: prompts.txt
eval/lib/: backend_path.py  judge.py  metrics.py  reporter.py
eval/runners/: baseline.py  eval_latency.py  eval_llm.py  eval_llm_compare.py  eval_streaming.py  eval_stt.py  eval_tts.py
finetune/: Modelfile.template  README.md  dataset_example.jsonl  merge_export.py  prepare_dataset.py  requirements.txt  train.ipynb  train.py
frontend/public/: recorder-worklet.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/audio/: clientVad.js  microphoneStream.js  streamingPlayer.js
frontend/src/components/: ConsentGate.jsx  VoiceAssistant.jsx
frontend/src/hooks/: useAudioRecorder.js
frontend/src/services/: api.js  consent.js  voiceWsClient.js
